# video_analyser-main

./: .gitignore  README.md  api.py  api_models.py  main.py  pyproject.toml  send_request.py  test.py  utils.py
db/: __init__.py  database.py  models.py
spider/: __init__.py  douyin.py  kuaishou.py  pipix.py  spider.py  utils.py  weishi.py
video_analyser/: __init__.py  frame_describer.py  scene_detector.py  transcriber.py  utils.py  video_analyser.py
