[project]
name = "video-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.10",
    "fastapi>=0.115.6",
    "loguru>=0.7.3",
    "numpy>=2.2.0",
    "openai>=1.57.3",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "pysrt>=1.1.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sherpa-onnx>=1.10.35",
    "uvicorn>=0.32.1",
]
